v1.1: Started Modal - Z-index fixed; Logo, contact backend, and Waypoints required

--- a/_common.scss
+++ b/_common.scss
@@ -5,6 +5,7 @@
 
 .container {
   width: 100%;
+  position: relative;
 }
 
 .col-full {
